Archive2/71/dae9ebf654f017/output
main.cpp: In member function 'void TheFriend::f()':
main.cpp:8:25: error: 'const int Outer::Inner::i' is private
        static const int i = -1;
                         ^
main.cpp:11:57: error: within this context
 struct TheFriend{ void f() { std::cout << Outer::Inner::i << '\n'; } };
                                                         ^
